# tg_user_game

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: .env  __main__.py  config_reader.py
src/models/: user.py
src/web/static/: style.css
src/web/templates/: index.html
